added Login page

--- a/src/components/input/Input.module.scss
+++ b/src/components/input/Input.module.scss
@@ -4,10 +4,11 @@
   width: 100%;
   border: 0.12rem solid $color-gray;
   border-radius: 0.6rem;
-  padding: 0 1.2rem;
+  padding: 0 3rem 0 1rem;
   height: 4.8rem;
   &::placeholder {
     font-size: 1.5rem;
     color: $color-gray;
   }
+  outline: none;
 }
