--- a/src/components/login/Login.module.scss
+++ b/src/components/login/Login.module.scss
@@ -28,10 +28,35 @@
   color: $color-gray;
   font-size: 1.2rem;
 }
+.input-wrapper {
+  width: 100%;
+  position: relative;
+}
 .sign-up {
   font-size: 1.5rem;
   a {
     color: $color-blue;
     text-decoration: none;
   }
+}
+
+.password-toggle-icon {
+  position: absolute;
+  top: 2.5rem;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  background-color: gray;
+}
+
+.password-toggle-icon i {
+  font-size: 18px;
+  line-height: 1;
+  color: #333;
+  transition: color 0.3s ease-in-out;
+  margin-bottom: 20px;
+}
+
+.password-toggle-icon i:hover {
+  color: #000;
 }
