added forgot-password page

--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -6,9 +6,18 @@
   width: 100%;
   border: none;
   padding: 13px;
+  cursor: pointer;
 }
 .button-text {
   color: $color-white;
   font-size: 1.6rem;
   line-height: 2.1rem;
+  font-weight: 500;
+}
+.cancel-button {
+  background-color: $color-white;
+  border: 1px solid $color-gray;
+  .button-text {
+    color: $button-black-text;
+  }
 }
