--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -7,6 +7,9 @@
 #root {
   height: 100%;
   width: 100%;
+  margin-top: 18rem;
+  display: flex;
+  justify-content: center;
 }
 html {
   font-size: 62.5%; // ~10px
