--- a/src/components/input/Input.module.scss
+++ b/src/components/input/Input.module.scss
@@ -12,3 +12,15 @@
   }
   outline: none;
 }
+.password-toggle-icon {
+  font-size: 1.5rem;
+  position: absolute;
+  top: 2.5rem;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.input-wrapper {
+  width: 100%;
+  position: relative;
+}
